--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dash==2.9.3
 pandas==1.5.3
 numpy==1.24.2
-#scikit-learn==1.2.2
+scikit-learn==1.2.2
 plotly==5.14.1
-#folium==0.14.0
+folium==0.14.0
+
